# file-mapper

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .style.yapf  CHANGELOG.md  README.md  file-mapper.py  main.py  manual-mapper.py  requirements.txt  requirements_dev.txt  settings.py  setup.cfg  setup.py
.github/workflows/: tests.yml
.run/: Run.run.xml  Testing.run.xml  test-all.run.xml  test-integration.run.xml
src/: engine.py  runner.py  settings.py
src/core/: __init__.py  exceptions.py  types.py
src/core/datasources/: datasource.py
src/datasources/: _datasource.py  datasource.py  exceptions.py
src/filemapper/: engine.py
src/formatter/: __init__.py  _formatter.py  anime.py
src/manualmapper/: README.md  engine.py  loader.py  logger.py
src/matchers/: __init__.py  matcher.py
src/models/: __init__.py  item.py  metadata.py
src/parsers/: __init__.py  _parser.py  anime.py  film.py  generic.py
src/processors/: __init__.py  _processor.py  anime.py  generic.py  unknown.py
src/tbuilder/: __init__.py  models.py  tbuilder.py
src/utils/: string.py  strings.py
tests/: factories.py  settings.py  test.py  utils.py
tests/datasources/: test_api_mal.py  test_scrapper_wikipedia.py
tests/formatter/: test_anime_episode_formatter.py  test_anime_season_formatter.py
tests/integration/: setup.py
tests/matchers/: test_matcher.py
tests/media/: test_episode.py  test_season.py
tests/parsers/: test_anime_episode_parser.py  test_anime_parser.py  test_anime_season_parser.py  test_film_parser.py
tests/unit/: test_matcher.py  test_models.py
(+131 files in other folders)
