[metadata]
name = filemapper
author = Iago Santos
license = MIT
license_file = LICENSE
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages =
    src
scripts =
    file-mapper.py
install_requires =
    aiohttp==3.8.5
    beautifulsoup4==4.11.1
    Deprecated==1.2.13
    environs==9.5.0
    html5lib==1.1
    Morfessor==2.0.6
    numpy==1.23.1
    polyglot==16.7.4
    pycld2==0.41
    PyICU==2.9
    requests==2.28.1
    responses==0.21.0
    yapf==0.32.0
python_requires = >=3.7
zip_safe = no

[options.package_data]
filemapper = py.typed
